Update ES6InterActive.java